src/www/style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* body */
body {
  @apply min-h-[100dvh] px-5 py-5 md:px-48 flex flex-col items-center justify-center gap-5;
}

/* main log */
section {
  @apply hidden flex-col;
}

section.active {
  @apply flex;
}

/* buttons */
button {
  @apply flex flex-row items-center capitalize;
}

button.active {
  @apply text-green-600;
}

button::before {
  content: "";
  @apply mr-1 block rounded-full w-3 h-3 border-4 border-gray-600;
}

button.active::before {
  @apply border-green-600;
}

/* logs */
ul > li {
  @apply px-2 py-1 border border-b-0 border-green-600 flex flex-col;
}

ul > li:first-of-type {
  @apply rounded-t-md;
}

ul > li:last-of-type {
  @apply border-b rounded-b-md;
}

